2005-10-17  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_create_model_no_date): Off-by-one error.
	* logview.c (logview_copy): Don't crash when copying lines from a
	log without dates.
	* logview.c (logview_menus_set_state): Improve readability.
	* logview.c (logview_init): Rename some stuff to make it consistent.
	* logview.c (logview_destroy, save_session): We only have one
	window now, so simplify.
	* logrtns.c (logline_get_date): Moved this function to logrtns.c
	* logrtns.h (struct _log): Move the log struct declaration in
	logrtns.h instead of logview.h.
	* calendar.c (calendar_day_selected): Fix a couple of warnings.
	* calendar.c (calendar_close): Remove.

2005-10-17  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (ParseLine): Handle zero-length lines better
	(e.g. don't crash).

2005-10-14  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (logline_get_date): Make static.

2005-10-14  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (selection_changed_cb), (logline_get_date),
	(model_fill_date_iter):
	* log_repaint.h:
	* logview.c: (CreateMainWin): Use g_date_strftime instead of strftime.

2005-10-14  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* config.c:
	* configdata.h:
	* logview.c: (main): Remove some leftovers.

2005-10-14  Vincent Noel <vnoel@cox.net>

	* TODO: Remove the gnome-vfs monitoring (it's done)

2005-10-14  Vincent Noel <vnoel@cox.net>

	* info.c: (loginfo_repaint), (loginfo_quit), (loginfo_close),
	(loginfo_new):
	* info.h:
	* logview.c: Shuffling and cleaning up.

2005-10-14  Vincent Noel  <vnoel@cox.net>

	* info.c (RepaintLogInfo): Use
	gnome_vfs_format_file_size_for_display to show the file size.
	* log_repaint.c (logview_update_statusbar): We have the info,
	might as well show it in the status bar.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Small tweaking.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Some more updates.

2005-10-13  Vincent Noel <vnoel@cox.net>
